--- a/small_prince/src/CSS/style.css
+++ b/small_prince/src/CSS/style.css
@@ -5,6 +5,9 @@
 	свойство:значение;
 }
 
+*{
+	box-sizing: border-box
+}
 a{
 	color:red;
 	font-size: 30px;
@@ -27,3 +30,27 @@ a{
 .text{
 	font-style: italic;
 }
+.box {
+	display: inline-block;
+	/* box-sizing: border-box; */ /* в начало документа */
+	width: 300px;
+	height: 300px;
+	background-color: darkgray;
+	padding: 20px; /* 1-верх, 2-право, 3-низ, 4-лево  ОТСТУП*/
+/* 	border-width: 3px; /* Ширина границы */
+/* 	border-style: solid; /* Цвет и стиль - сплошная непрерывная линия */
+/* 	border-color: black; */
+	border: 3px dashed black;
+	margin: 20px;
+}
+img{
+	display: block;	
+	margin: 0 auto;
+	}
+
+
+
+
+/* блочные */
+/* строчные */
+/* строчно-блочные */ 
