--- a/wordpress/css/style.css
+++ b/wordpress/css/style.css
@@ -123,7 +123,7 @@ h2.title{
 	padding: 85px 0 75px 0;
 }
 
-.waiting .waiting_header{
+.waiting .waiting_header, .finish .finish_header {
 	color: #252525;
 	font-family: Roboto;
 	font-size: 30px;
@@ -132,7 +132,11 @@ h2.title{
 	text-align: center;
 }
 
-.waiting .waiting_divider{
+.finish .finish_header{
+	color: white;
+}
+
+.waiting .waiting_divider, .finish .finish_divider{
 	width: 217px;
 	height: 4px;
 	background-color: #f9bf3b;
@@ -230,7 +234,86 @@ h2.title{
 .optimization .optimization_img{
 	position: absolute;
 	top: 54px;
-	left: 150px;
+	left: -100px;
 	z-index: -1;
 
+}
+
+.finish{
+	min-height: 447px;
+	padding: 86px 0 79px 0;
+	background: url(/img/bg/plus.jpg) center center /cover no-repeat;
+}
+
+.finish .finish_wrapper{
+	margin-top: 41px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.finish .finish_wrapper .finish_item{
+	width: 204px;
+}
+
+.finish .finish_wrapper .finish_item .finish_round{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0 auto;
+	width: 115px;
+	height: 115px;
+	background-color: #b4e2ff;
+	border-radius: 100%;
+}
+
+.finish .finish_wrapper .finish_item .finish_descr{
+	margin-top: 25px;
+	color: #efefef;
+	font-family: Roboto;
+	font-size: 17px;
+	font-weight: 300;
+	line-height: 20px;
+	text-align: center;
+}
+
+.bonus{
+	min-height: 628px;
+	padding: 86px 0 87px 0;
+	background-color: #efefef;
+}
+
+.bonus .bonus_img{
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+}
+
+.bonus .gift_descr{
+	margin-top: 42px;
+	color: #252525;
+	font-family: Roboto;
+	font-size: 30px;
+	font-weight: 400;
+	line-height: 43px;
+	text-align: center;
+}
+
+.bonus .gift_btn{
+	display: block;
+	margin: 0px auto;
+	margin-top: 52px;
+	width: 313px;
+	height: 72px;
+	box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.18);
+	border: 4px solid rgba(0, 0, 0, 0.11);
+	background-image: linear-gradient(to top, #2798b9 0%, #3ab6da 100%);
+	text-shadow: -1px -1px 0 rgba(0, 0, 0, 0.22);
+	color: #ffffff;
+	font-family: "Roboto Condensed";
+	font-size: 21px;
+	font-weight: 400;
+	line-height: 24px;
+	text-transform: uppercase;
+	cursor: pointer; 
+	outline: none;
 }
